@@ -27,7 +27,7 @@
     #include <windows.h>
 #elif defined(__MACH__) || defined(__APPLE__)
     #include <mach/mach_time.h>
-#elif defined(linux) || defined(__linux) || defined(__FreeBSD__)
+#elif defined(linux) || defined(__linux) || defined(__FreeBSD__) || defined(__NetBSD__) || defined(__OpenBSD__) || defined(__FreeBSD_kernel__)
     #include <time.h>
 #elif defined(sun) || defined(__sun) || defined(_AIX)
     #include <sys/time.h>
@@ -61,7 +61,8 @@ namespace Rcpp{
         /* Convert to nanoseconds */
         return time * (info.numer / info.denom);
     }
-#elif defined(linux) || defined(__linux) || defined(__FreeBSD__)
+
+#elif defined(linux) || defined(__linux) || defined(__FreeBSD__) || defined(__NetBSD__) || defined(__OpenBSD__) || defined(__FreeBSD_kernel__)
 
     static const nanotime_t nanoseconds_in_second = 1000000000LL;
     
